--- a/GalleryMVC_With_Auth/Views/Manage/AddPhoneNumber.cshtml
+++ b/GalleryMVC_With_Auth/Views/Manage/AddPhoneNumber.cshtml
@@ -1,9 +1,6 @@
 ﻿@model GalleryMVC_With_Auth.Models.AddPhoneNumberViewModel
-@{
-    ViewBag.Title = "Phone Number";
-}
 
-<h2>@ViewBag.Title.</h2>
+<h2>Телефонный номер.</h2>
 
 @using (Html.BeginForm("AddPhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
