--- a/GalleryMVC_With_Auth/Views/Manage/ChangePassword.cshtml
+++ b/GalleryMVC_With_Auth/Views/Manage/ChangePassword.cshtml
@@ -1,9 +1,6 @@
 ﻿@model GalleryMVC_With_Auth.Models.ChangePasswordViewModel
-@{
-    ViewBag.Title = "Change Password";
-}
 
-<h2>@ViewBag.Title.</h2>
+<h2>Смена пароля.</h2>
 
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
