--- a/GalleryMVC_With_Auth/Views/Manage/Index.cshtml
+++ b/GalleryMVC_With_Auth/Views/Manage/Index.cshtml
@@ -1,10 +1,7 @@
 ﻿@using GalleryMVC_With_Auth.Resources
 @model GalleryMVC_With_Auth.Models.IndexViewModel
-@{
-    ViewBag.Title = "Панель управления учетной записью";
-}
 
-<h2>@ViewBag.Title.</h2>
+<h2>Панель управления учетной записью.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
