--- a/GalleryMVC_With_Auth/Views/Manage/ManageLogins.cshtml
+++ b/GalleryMVC_With_Auth/Views/Manage/ManageLogins.cshtml
@@ -1,10 +1,7 @@
 ﻿@model GalleryMVC_With_Auth.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
-@{
-    ViewBag.Title = "Manage your external logins";
-}
 
-<h2>@ViewBag.Title.</h2>
+<h2>Управление вашими внешними учётными записями.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 @{
