--- a/GalleryMVC_With_Auth/Views/Roles/Create.cshtml
+++ b/GalleryMVC_With_Auth/Views/Roles/Create.cshtml
@@ -1,14 +1,9 @@
 ﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
-@{
-    ViewBag.Title = "Create";
-}
 
-<h2>Create</h2>
+<h2>Создание ролей</h2>
 
 <style type="text/css">
-    #tbrole, .c {
-        border: double;
-    }
+    #tbrole, .c { border: double; }
 </style>
 
 
@@ -22,5 +17,5 @@
             </td>
         </tr>
     </table>
-    <input type="submit" value="Create Role" />
+    <input type="submit" value="Create Role"/>
 }
