--- a/GalleryMVC_With_Auth/Views/Shared/AuthorizeFailed.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/AuthorizeFailed.cshtml
@@ -1,8 +1,3 @@
-﻿
-@{
-    ViewBag.Title = "AuthorizeFailed";
-}
-
-<h2>Authorize Failed</h2>
+﻿<h2>Неудачная авторизация</h2>
 
 @ViewData["Message"]
