--- a/GalleryMVC_With_Auth/Views/Shared/_GalleryPartial.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_GalleryPartial.cshtml
@@ -13,9 +13,10 @@
         @foreach (var p in Model)
         {
             <figure class="effect-milo">
-                <img class="lazy" data-original="@p.TmbPath" alt="@p.Category" />
+                <img class="lazy" data-original="@p.TmbPath" alt="@p.Category"/>
                 <figcaption>
-                    <h2><span>@p.Category</span></h2>
+                    <h2>
+                        <span>@p.Category</span></h2>
                     <p style="color: red">Автор - @p.Name.</p>
                     <p style="color: red">Тэг - @p.Tag</p>
                     <p style="color: red">Цена - @p.Price$!</p>
@@ -27,7 +28,7 @@
 </div>
 
 <script>
-    $(function () {
+    $(function() {
         $("img.lazy").lazyload({
             effect: "fadeIn"
         });
