--- a/GalleryMVC_With_Auth/Views/Manage/SetPassword.cshtml
+++ b/GalleryMVC_With_Auth/Views/Manage/SetPassword.cshtml
@@ -1,9 +1,6 @@
 ﻿@model GalleryMVC_With_Auth.Models.SetPasswordViewModel
-@{
-    ViewBag.Title = "Create Password";
-}
 
-<h2>@ViewBag.Title.</h2>
+<h2>Саздание пароля.</h2>
 <p class="text-info">
     You do not have a local username/password for this site. Add a local
     account so you can log in without an external login.
