--- a/GalleryMVC_With_Auth/Views/Shared/Lockout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/Lockout.cshtml
@@ -1,8 +1,4 @@
-﻿@model System.Web.Mvc.HandleErrorInfo
-
-@{
-    ViewBag.Title = "Locked Out";
-}
+﻿@model HandleErrorInfo
 
 <hgroup>
     <h1 class="text-danger">Locked out.</h1>
