--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Галерея БелАрт (Брест)</title>
+    <title>Галерея БелАрт (Брест)</title>
 
     @Styles.Render("~/Content/styles")
     @Scripts.Render("~/bundles/modernizr")
@@ -24,8 +24,8 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Домой", Defines.IndexView, new {controller = Defines.HomeControllerName}, new {@class = "home"})</li>
-                <li>@Html.ActionLink("О нас", "About", new {controller = Defines.HomeControllerName }, new {@class = "about"})</li>
-                <li>@Html.ActionLink("Контакты", "Contact", new {controller = Defines.HomeControllerName }, new {@class = "contacts"})</li>
+                <li>@Html.ActionLink("О нас", "About", new {controller = Defines.HomeControllerName}, new {@class = "about"})</li>
+                <li>@Html.ActionLink("Контакты", "Contact", new {controller = Defines.HomeControllerName}, new {@class = "contacts"})</li>
                 <li>@Html.ActionLink("Админ панель", Defines.IndexView, new {controller = "AdminPanel"}, new {@class = "admin"})</li>
                 <li>
                     <div class="container">
