--- a/GalleryMVC_With_Auth/Views/Shared/_LoginPartial.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_LoginPartial.cshtml
@@ -2,22 +2,24 @@
 @using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new {id = "logoutForm", @class = "navbar-right"}))
     {
-    @Html.AntiForgeryToken()
+        @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Приветствуем вас " + User.Identity.GetUserName() + "!", Defines.IndexView, Defines.ManageControllerName, routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Выйти</a></li>
-    </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                @Html.ActionLink("Приветствуем вас " + User.Identity.GetUserName() + "!", Defines.IndexView, Defines.ManageControllerName, null, new {title = "Manage"})
+            </li>
+            <li>
+                <a href="javascript:document.getElementById('logoutForm').submit()">Выйти</a>
+            </li>
+        </ul>
     }
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Регистрация", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Авторизация", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li>@Html.ActionLink("Регистрация", "Register", "Account", null, new {id = "registerLink"})</li>
+        <li>@Html.ActionLink("Авторизация", "Login", "Account", null, new {id = "loginLink"})</li>
     </ul>
 }
