Refactoring: font size up

--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
 <div class="splash">
     <div class="container" style="color: gray;">
         <h1>Художественная галерея</h1>
-        <p class="lead">"Беларт"</p>
+        <p class="lead" style="font-size: 420%">"Беларт"</p>
     </div>
 </div>
 <div class="container body-content">
