--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -19,11 +19,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Галерея", Defines.IndexView, Defines.HomeControllerName, null, new {@class = "navbar-brand"})
+            @Html.ActionLink("БелАрт", Defines.IndexView, Defines.HomeControllerName, null, new {@class = "navbar-brand"})
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("БелАрт", Defines.IndexView, new {controller = Defines.HomeControllerName}, new {@class = "home"})</li>
+                <li>@Html.ActionLink("Домой", Defines.IndexView, new {controller = Defines.HomeControllerName}, new {@class = "home"})</li>
                 <li>@Html.ActionLink("О нас", "About", new {controller = Defines.HomeControllerName}, new {@class = "about"})</li>
                 <li>@Html.ActionLink("Контакты", "Contact", new {controller = Defines.HomeControllerName}, new {@class = "contacts"})</li>
                 <li>@Html.ActionLink("Админ панель", Defines.IndexView, new {controller = "AdminPanel"}, new {@class = "admin"})</li>
