--- a/GalleryMVC_With_Auth/Content/css/transp_menu.css
+++ b/GalleryMVC_With_Auth/Content/css/transp_menu.css
@@ -1,206 +1,149 @@
-﻿body{
-	padding-top:50px
-}
+﻿body { padding-top: 50px }
 
-body>.navbar{
-	-webkit-transition:background-color 300ms ease-in;
+body > .navbar {
+    -webkit-transition: background-color 300ms ease-in;
     transition: background-color 300ms ease-in;
 }
 
-@media (min-width:768px){
-	body>.navbar-transparent{
-	    background-color: transparent;
-	}
+@media (min-width: 768px) {
+    body > .navbar-transparent { background-color: transparent; }
 
-	body>.navbar-transparent .navbar-nav>.open>a{
-		background-color:transparent!important
-	}
-
+    body > .navbar-transparent .navbar-nav > .open > a { background-color: transparent !important }
 }
 
-#home{
-	padding-top:0
-}
+#home { padding-top: 0 }
 
-#home .navbar-brand{
-	padding:13.5px 15px 12.5px
-}
+#home .navbar-brand { padding: 13.5px 15px 12.5px }
 
-#home .navbar-brand>img{
-	display:inline;
-	margin:0 10px;
-	height:100%
+#home .navbar-brand > img {
+    display: inline;
+    height: 100%;
+    margin: 0 10px;
 }
 
 /*.navbar-inverse {
     background-color: rgba(128, 128, 128, 0.50);
 }*/
 
-#banner{
-	min-height:300px;
-	border-bottom:none
+#banner {
+    border-bottom: none;
+    min-height: 300px;
 }
 
-.page-header h1{
-	font-size:4em
+.page-header h1 { font-size: 4em }
+
+.bs-docs-section { margin-top: 8em }
+
+.bs-component { position: relative }
+
+.bs-component .modal {
+    bottom: auto;
+    display: block;
+    left: auto;
+    position: relative;
+    right: auto;
+    top: auto;
+    z-index: 1;
 }
 
-.bs-docs-section{
-	margin-top:8em
+.bs-component .modal-dialog { width: 90% }
+
+.bs-component .popover {
+    display: inline-block;
+    margin: 20px;
+    position: relative;
+    width: 220px;
 }
 
-.bs-component{
-	position:relative
+#source-button {
+    font-weight: 700;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 100;
 }
 
-.bs-component .modal{
-	position:relative;
-	top:auto;
-	right:auto;
-	left:auto;
-	bottom:auto;
-	z-index:1;
-	display:block
-}
+.nav-tabs { margin-bottom: 15px }
 
-.bs-component .modal-dialog{
-	width:90%
-}
-
-.bs-component .popover{
-	position:relative;
-	display:inline-block;
-	width:220px;
-	margin:20px
-}
-
-#source-button{
-	position:absolute;
-	top:0;
-	right:0;
-	z-index:100;
-	font-weight:700
-}
-
-.nav-tabs{
-	margin-bottom:15px
-}
-
-.progress{
-	margin-bottom:10px
-}
+.progress { margin-bottom: 10px }
 
 .splash {
-    padding: 3em 0 2em;
     background-color: rgb(46, 46, 46);
     background-size: cover;
+    padding: 3em 0 2em;
     text-align: center;
 }
 
-.splash .logo{
-	width:160px
+.splash .logo { width: 160px }
+
+.splash h1 { font-size: 3em }
+
+.splash #social { margin: 2em 0 }
+
+.splash .alert { margin: 2em 0 }
+
+.section-tout {
+    background-color: #eaf1f1;
+    border-bottom: 1px solid rgba(0, 0, 0, .05);
+    padding: 4em 0 3em;
 }
 
-.splash h1{
-	font-size:3em
+.section-tout .fa { margin-right: .5em }
+
+.section-tout p { margin-bottom: 3em }
+
+.section-preview { padding: 4em 0 4em }
+
+.section-preview .preview {
+    background-color: #eaf1f1;
+    margin-bottom: 4em;
 }
 
-.splash #social{
-	margin:2em 0
+.section-preview .preview .image { position: relative }
+
+.section-preview .preview .image:before {
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .1);
+    content: "";
+    height: 100%;
+    left: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    width: 100%;
 }
 
-.splash .alert{
-	margin:2em 0
+.section-preview .preview .options {
+    border: 1px solid rgba(0, 0, 0, .05);
+    border-top: none;
+    padding: 1em 2em 2em;
+    text-align: center
 }
 
-.section-tout{
-	padding:4em 0 3em;
-	border-bottom:1px solid rgba(0,0,0,.05);
-	background-color:#eaf1f1
+.section-preview .preview .options p { margin-bottom: 2em }
+
+.section-preview .dropdown-menu { text-align: left }
+
+.section-preview .lead { margin-bottom: 2em; }
+
+
+
+@media (max-width: 767px) {
+    .section-preview .image img { width: 100% }
 }
 
-.section-tout .fa{
-	margin-right:.5em
-}
+.sponsor { text-align: center }
 
-.section-tout p{
-	margin-bottom:3em
-}
+.sponsor a:hover { text-decoration: none }
 
-.section-preview{
-	padding:4em 0 4em
-}
+@media (max-width: 767px) {
+    .splash { padding-top: 4em }
 
-.section-preview .preview{
-	margin-bottom:4em;
-	background-color:#eaf1f1
-}
+    .splash .logo { width: 100px }
 
-.section-preview .preview .image{
-	position:relative
-}
+    .splash h1 { font-size: 2em }
 
-.section-preview .preview .image:before{
-	box-shadow:inset 0 0 0 1px rgba(0,0,0,.1);
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-	content:"";
-	pointer-events:none
-}
-
-.section-preview .preview .options{
-	padding:1em 2em 2em;
-	border:1px solid rgba(0,0,0,.05);
-	border-top:none;
-	text-align:center
-}
-
-.section-preview .preview .options p{
-	margin-bottom:2em
-}
-
-.section-preview .dropdown-menu{
-	text-align:left
-}
-
-.section-preview .lead{
-	margin-bottom:2em
-}
-
-@media (max-width:767px){
-	.section-preview .image img{
-		width:100%
-	}
-
-}
-
-.sponsor{
-	text-align:center
-}
-
-.sponsor a:hover{
-	text-decoration:none
-}
-
-@media (max-width:767px){
-	.splash{
-		padding-top:4em
-	}
-
-	.splash .logo{
-		width:100px
-	}
-
-	.splash h1{
-		font-size:2em
-	}
-
-	#banner{
-		margin-bottom:2em;
-		text-align:center
-	}
-
+    #banner {
+        margin-bottom: 2em;
+        text-align: center
+    }
 }
