--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -48,8 +48,8 @@
 </div>
 <div class="splash">
     <div class="container" style="color: gray;">
-        <h1>Художественная галерея</h1>
-        <p class="lead" style="font-size: 420%">"Беларт"</p>
+        <h1 class="hd">художественная галерея</h1>
+        <p class="lead fontstst" style="font-size: 420%;"><span style="color: red">B</span>el<span style="color: red">A</span>rt</p>
     </div>
 </div>
 <div class="container body-content">
