--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("БелАрт", Defines.IndexView, Defines.HomeControllerName, null, new {@class = "navbar-brand"})
+            @Html.ActionLink("BA", Defines.IndexView, Defines.HomeControllerName, null, new {@class = "navbar-brand logotypeM", style= "color: white" })
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -49,7 +49,7 @@
 <div class="splash">
     <div class="container" style="color: gray;">
         <h1 class="hd">художественная галерея</h1>
-        <p class="lead fontstst" style="font-size: 420%;"><span style="color: red">B</span>el<span style="color: red">A</span>rt</p>
+        <p class="lead logotype" style="font-size: 420%;"><span style="color: red">B</span>el<span style="color: red">A</span>rt</p>
     </div>
 </div>
 <div class="container body-content">
