Refactoring: red color on page

--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
 <div class="splash">
     <div class="container" style="color: gray;">
         <h1 class="hd">художественная галерея</h1>
-        <p class="lead logotype" style="font-size: 420%;"><span style="color: red">B</span>el<span style="color: red">A</span>rt</p>
+        <p class="lead logotype" style="font-size: 420%;"><span style="color: #BE4C39">B</span>el<span style="color: #BE4C39">A</span>rt</p>
     </div>
 </div>
 <div class="container body-content">
