--- a/GalleryMVC_With_Auth/Views/Shared/_GoogleAnalytics.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_GoogleAnalytics.cshtml
@@ -1,4 +1,4 @@
-﻿<script type="text/javascript">
+﻿<script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
@@ -13,4 +13,5 @@
 
     ga('create', 'UA-65369606-1', 'auto');
     ga('send', 'pageview');
+
 </script>
