Refactoring: adding description and keywords to site

--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -4,7 +4,28 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Галерея БелАрт (Брест)</title>
+    <meta name='yandex-verification' content='5f6e3bf559dea11f'/>
+    <meta name="keywords" content="Художественная галерея Беларт, галерея Беларт Брест, купить, картину, живопись, натюрморт, графика, акварель, офорт, литография, линогравюра, 
+батик, керамика, произведения, декоративно-прикладное искусство, багетная, мастерская, рамка">
+    <meta name="description" content="Художественная галерея Беларт. Купить картину в Бресте. Купить картину, живопись, натюрморт, графику, акварель, офорт, 
+литографию, линогравюру, батик, керамику, произведения декоративно-прикладного искусства. Багетная мастерская. Багетные рамки. Деревянный и пластиковый 
+багет. Мебель по индивидуальному заказу">
+    <!-- FB -->
+    <meta property="og:title" content="БелАрт галерея Брест" />
+    <meta property="og:url" content="http://belart-brest.by/" />
+    <meta property="og:image" content="" />
+    <meta property="og:description" content="Галерея БелАрт в Бресте" />
+    <meta property="og:site_name" content="http://belart-brest.by/" />
+    <!-- FB End-->
+
+    <!-- VK -->
+    <meta property="vk:title" content="БелАрт галерея Брест" />
+    <meta property="vk:url" content="http://belart-brest.by/" />
+    <meta property="vk:image" content="" />
+    <meta property="vk:description" content="Галерея БелАрт в Бресте" />
+    <!-- VK End -->
+
+    <title>Галерея БелАрт Брест</title>
 
     @Styles.Render("~/Content/styles")
     @Scripts.Render("~/bundles/modernizr")
