Add: href to <a>

--- a/GalleryMVC_With_Auth/Views/Home/Index.cshtml
+++ b/GalleryMVC_With_Auth/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
             <figcaption>
                 <h2><span>@a.Name</span></h2>
                 <p>@a.Description</p>
-                <a onclick="location.href = '@Url.Action("Universal", "Images", new {@a.Id})'">Открыть</a>
+                <a href="@Url.Action("Universal", "Images", new {@a.Id})" onclick="location.href = '@Url.Action("Universal", "Images", new {@a.Id})'">Открыть</a>
             </figcaption>
         </figure>
     }
