Refactoring: made more user-friendly error page

--- a/GalleryMVC_With_Auth/Views/Shared/Error.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/Error.cshtml
@@ -8,10 +8,12 @@
     <meta name="viewport" content="width=device-width" />
     <title>Ошибка</title>
 </head>
-<body>
-    <hgroup>
-        <h1>У-у-у-пс.</h1>
-        <h2>Произошла ошибка во время выполнения операции.</h2>
-    </hgroup>
+<body style="background: rgb(86, 188, 237)">
+    <div style="text-align: center">
+        <hgroup style="color: whitesmoke">
+            <h1 style="font-size: 300%">У-у-у-пс. <span style="font-size: 600%">:'(</span></h1>
+            <h2>Произошла ошибка во время выполнения операции.</h2>
+        </hgroup>
+    </div>
 </body>
 </html>
