Refactoring: fix exception when server have no errors

--- a/GalleryMVC_With_Auth/Views/Errors/Index.cshtml
+++ b/GalleryMVC_With_Auth/Views/Errors/Index.cshtml
@@ -2,4 +2,7 @@
 
 <h2>Ошибка!</h2>
 
-@Server.GetLastError().Message
+@if (Server.GetLastError()!= null)
+{
+    <h3>Server.GetLastError().Message</h3>
+}
