Update: views to work with tags

--- a/GalleryMVC_With_Auth/Views/AdminPanel/Upload.cshtml
+++ b/GalleryMVC_With_Auth/Views/AdminPanel/Upload.cshtml
@@ -24,7 +24,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Picture.Tag, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Picture.Tag, new {@class = "form-control", Name = "Tag", id = "Tag"})
+            @Html.TextBoxFor(m => m.Picture.Tag.Name, new {@class = "form-control", Name = "Tag.Name", id = "Tag.Name"})
         </div>
     </div>
     <div class="form-group">
