--- a/GalleryMVC_With_Auth/Views/Images/Universal.cshtml
+++ b/GalleryMVC_With_Auth/Views/Images/Universal.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<GalleryMVC_With_Auth.Domain.Entities.Picture>
+﻿@using GalleryMVC_With_Auth.Domain.Entities
+@model IEnumerable<Picture>
 
 <h2>@Model.FirstOrDefault().Album.Name</h2>
 
