--- a/GalleryMVC_With_Auth/Views/Shared/_GalleryPartial.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_GalleryPartial.cshtml
@@ -1,4 +1,5 @@
-﻿<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
+﻿@using GalleryMVC_With_Auth.Domain.Entities
+<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
     <div class="slides"></div>
     <h3 class="title"></h3>
     <a class="prev">‹</a>
@@ -10,7 +11,7 @@
 
 <div class="grid">
     <div id="links">
-        @foreach (var picture in Model)
+        @foreach (Picture picture in Model)
         {
             <figure class="effect-milo">
                 <img class="lazy" data-original="@picture.TmbPath" alt="@picture.Category"/>
@@ -18,7 +19,7 @@
                     <h2>
                         <span>@picture.Category</span></h2>
                     <p style="color: red">Автор - @picture.Name.</p>
-                    <p style="color: red">Тэг - @picture.Tag</p>
+                    <p style="color: red">Тэг - @picture.Tag.Name</p>
                     <p style="color: red">Цена - @picture.Price бел.руб.</p>
                     <a href="@picture.Path" title="@picture.Name"></a>
                 </figcaption>
