--- a/GalleryMVC_With_Auth/Views/Shared/_GalleryPartial.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_GalleryPartial.cshtml
@@ -21,13 +21,15 @@
                     <p style="color: red">Автор - @picture.Name.</p>
                     <p style="color: red">Тэг - @picture.Tag.Name</p>
                     <p style="color: red">Цена - @picture.Price бел.руб.</p>
-                    <a href="@picture.Path" title="@picture.Name"></a>
+                    <a class="pic" id="links" href="@picture.Path" title="@picture.Name"></a>
                 </figcaption>
             </figure>
+            <a style="margin: 10px" href="@Url.Action("Comments", "Images", new {@picture.Id})" onclick="location.href = '@Url.Action("Comments", "Images", new {@picture.Id})'">Комментарии</a>
+            @*@Html.ActionLink("comments", "Comments", "Images", new {picture.Id}, new {@class = "comment", onclick= "window.open(url)" })*@
+            
         }
     </div>
 </div>
-
 <script>
     $(function() {
         $("img.lazy").lazyload({
