Refactoring: on images page change some text

--- a/GalleryMVC_With_Auth/Views/Shared/_GalleryPartial.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_GalleryPartial.cshtml
@@ -14,10 +14,10 @@
         @foreach (Picture picture in Model)
         {
             <figure class="effect-milo">
-                <img class="lazy" data-original="@picture.TmbPath" alt="@picture.Category"/>
+                <img class="lazy" data-original="@picture.TmbPath" alt="@picture.Description"/>
                 <figcaption>
                     <h2>
-                        <span>@picture.Category</span></h2>
+                        <span>@picture.Description</span></h2>
                     <p style="color: red">Автор - @picture.Name.</p>
                     <p style="color: red">Тэг - @picture.Tag.Name</p>
                     <p style="color: red">Цена - @picture.Price бел.руб.</p>
