--- a/GalleryMVC_With_Auth/Views/Images/Comments.cshtml
+++ b/GalleryMVC_With_Auth/Views/Images/Comments.cshtml
@@ -21,7 +21,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.FirstOrDefault().Text, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.FirstOrDefault().Text, new {@class = "form-control", Name = "Text", id = "Text"})
+            @Html.TextAreaFor(m => m.FirstOrDefault().Text, new { @class = "comment form-control", Name = "Text", id = "Text"})
         </div>
     </div>
     <button type="submit" class="btn btn-default">Отправить</button>
