Add: reactJS scripts part

--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
     @Scripts.RenderFormat(@"<script src="" {0}"" async></script>", "~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
+    @Scripts.Render("~/bundles/reactJS")
 </head>
 <body id="home">
 <div class="navbar navbar-inverse navbar-fixed-top navbar-transparent">
