Refactoring: tests page for working with ReactJS

--- a/GalleryMVC_With_Auth/Views/Home/tests.cshtml
+++ b/GalleryMVC_With_Auth/Views/Home/tests.cshtml
@@ -7,3 +7,15 @@
 <div class="grid" id="content"></div>
 
 <script src="@Url.Content("~/Scripts/views/main.jsx")"></script>
+<script src="@Url.Content("~/Scripts/views/Found.jsx")"></script>
+
+<script>
+    $('#search').on('oninput', function(e) {
+        e.preventDefault();
+        Rend();
+    });
+</script>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/galmagic")
+}
