Refactoring: remove price form _GalleryPartial

--- a/GalleryMVC_With_Auth/Views/Shared/_GalleryPartial.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_GalleryPartial.cshtml
@@ -20,7 +20,7 @@
                         <span>@picture.Description</span></h2>
                     <p style="color: red">Автор - @picture.Name.</p>
                     <p style="color: red">Тэг - @picture.Tag.Name</p>
-                    <p style="color: red">Цена - @picture.Price бел.руб.</p>
+                    @*<p style="color: red">Цена - @picture.Price бел.руб.</p>*@
                     <a class="pic" id="links" href="@picture.Path" title="@picture.Name"></a>
                 </figcaption>
             </figure>
