Refactoring: some changes in test page to work with pictures from album

--- a/GalleryMVC_With_Auth/Views/Home/tests.cshtml
+++ b/GalleryMVC_With_Auth/Views/Home/tests.cshtml
@@ -4,9 +4,16 @@
     ViewBag.Title = "Test";
 }
 
-    <div class="grid" id="content"></div>
+    <div class="grid" id="albums"></div>
     <script src="@Url.Content("~/Scripts/views/main.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/views/Found.jsx")"></script>
+<script src="@Url.Content("~/Scripts/views/Found.jsx")"></script>
+
+<div class="grid" id="pictures" style="background-color: wheat "></div>
+
+
+<a href="#content" class="btn btn-info btn-lg">
+    <span class="glyphicon glyphicon-arrow-up"></span> Up
+</a>
 
 
 
